tests/snapshots/parser__parser@multi_exprs.input.snap
---
source: tests/parser.rs
assertion_line: 36
expression: asts
input_file: tests/inputs/parser/multi_exprs.input

---
- - Ok:
      - Expr:
          BinOp:
            sym: Pow
            lhs:
              Num:
                value: 19
            rhs:
              BinOp:
                sym: Pow
                lhs:
                  Num:
                    value: 21
                rhs:
                  Num:
                    value: 40
      - Expr:
          BinOp:
            sym: Plus
            lhs:
              BinOp:
                sym: Minus
                lhs:
                  Num:
                    value: 19
                rhs:
                  BinOp:
                    sym: Mult
                    lhs:
                      Num:
                        value: 21
                    rhs:
                      Num:
                        value: 20
            rhs:
              Num:
                value: 40
  - (^ 19 (^ 21 40))(+ (- 19 (* 21 20)) 40)

