tests/snapshots/parser__parser@paren_prec.input.snap
---
source: tests/parser.rs
assertion_line: 36
expression: asts
input_file: tests/inputs/parser/paren_prec.input

---
- - Ok:
      - Expr:
          BinOp:
            sym: Div
            lhs:
              BinOp:
                sym: Plus
                lhs:
                  Num:
                    value: 19
                rhs:
                  Num:
                    value: 21
            rhs:
              Num:
                value: 40
  - (/ (+ 19 21) 40)

